# Book-Library

./: .gitignore  ArchitectureOverview.md  README.md  definitions.json  docker-compose.yml  example-definitions.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  seed_data.py  test_grpc_client.py
backend/alembic/: env.py
backend/alembic/versions/: 338f60554c14_initial_migration_books_members_.py  98790c5a10ba_add_staff_table.py  c47437d2a828_add_staff_table.py  dcdf32e9a087_update_borrowings_schema.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  grpc_server.py  main.py  models.py  redis_client.py  schemas.py  utils.py
backend/app/grpc_handlers/: __init__.py  auth_handler.py  books_handler.py  borrowings_handler.py  helpers.py  members_handler.py
backend/app/repositories/: __init__.py  book_repository_pg.py  borrowing_repository_pg.py  member_repository_pg.py  protocols.py  staff_repository_pg.py  unit_of_work.py
backend/app/routers/: auth.py  books.py  borrowings.py  members.py
backend/app/services/: __init__.py  auth_service.py  (+3 more)
backend/protos/: auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  books.proto  books_pb2.py  books_pb2.pyi  books_pb2_grpc.py  borrowings.proto  borrowings_pb2.py  borrowings_pb2.pyi  borrowings_pb2_grpc.py  common.proto  common_pb2.py  common_pb2_grpc.py  members.proto  members_pb2.py  members_pb2.pyi  members_pb2_grpc.py
backend/pubsub/: __init__.py  pubsub.py  topology.py
backend/tests/: conftest.py  test_books.py  test_borrowings.py  test_members.py
(+58 files in other folders)
